Added Download Resume provision CSS color added.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
   <div id="nav">
-    <nav class="shadow navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="shadow navbar navbar-expand-lg navbar-dark nav-background">
       <a class="navbar-brand" href="#">
         <img src="img/head-icon.jpg" width="30" height="30" class="d-inline-block align-top rounded-circle mr-2" alt="">
          Dr. R. Pandiyarajan
@@ -52,9 +52,13 @@
   
 	<div id="root"> 	</div>
 
+  <a type="button" class="btn btn-warning rounded-circle floating-button" data-toggle="tooltip" data-placement="left" title="Download Resume here &#128073;" href="document/Resume - Pandiyarajan.pdf" download><i class="material-icons floating-button-icon">save_alt</i></a>
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+
 
     <!-- Optional JavaScript -->
     <script src="js/contentload.js"></script>
